--- a/Changes
+++ b/Changes
@@ -1,6 +1,4 @@
-Revision history for Perl extension Color::Calc.
+Revision history for Perl extension Number::Phone:Normalize.
 
-0.02
-
-0.01  Tue Jul 22 00:00:00 2003
-	- private version (unpublished)
+0.00  Tue Oct 31 00:00:00 2006
+	- development version
